--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "daisyui": "^4.8.0",
+    "firebase": "^10.10.0",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "tw-elements": "^2.0.0",
