--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "tw-elements": "^2.0.0",
     "tw-elements-react": "^1.0.0-alpha2",
     "typed.js": "^2.1.0"
